[package]
name = "binsec"
description = "Swiss Army Knife for Binary (In)Security"

authors = ["ex0dus-0x <ex0dus@codemuch.tech>"]
license = "MIT"

homepage = "https://github.com/ex0dus-0x/binsec"
repository = "https://github.com/ex0dus-0x/binsec"
readme = "README.md"

version = "2.0.0"
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
clap = "2.33"
goblin = "0.4.0"
byte-unit = "4.0.10"
chrono = "0.4"

structmap = { git = "https://github.com/ex0dus-0x/structmap" }
structmap-derive = { git = "https://github.com/ex0dus-0x/structmap", path = "structmap-derive" }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
