[package]
name = "binsec"
description = "Binary (In)Security tool"

authors = ["ex0dus-0x <ex0dus@codemuch.tech>"]
license = "MIT"

homepage = "https://github.com/ex0dus-0x/binsec"
repository = "https://github.com/ex0dus-0x/binsec"
readme = "README.md"

version = "3.1.0"
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
clap = "2.33"
goblin = "0.4.0"
byte-unit = "4.0.10"
chrono = "0.4"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
